# photo-manager

./: .gitignore  README.md  pyproject.toml
photomanager/: google_photos.py  import.py
