[tool.poetry]
name = "photo-manager"
version = "0.1.0"
description = ""
authors = ["Kostas Kokkoros <mavroprovato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
