[tool.poetry]
name = "photo-manager"
version = "0.1.0"
description = ""
authors = ["Kostas Kokkoros <mavroprovato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
piexif = "^1.1.3"
google-api-python-client = "^2.12.0"
google-auth-oauthlib = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
